--- a/client/src/components/views/TodoPage/TodoTemplatePage.css
+++ b/client/src/components/views/TodoPage/TodoTemplatePage.css
@@ -3,7 +3,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 6rem;
-  border-radius: 4px;
+  border-radius: 7px;
   overflow: auto;
 }
 
@@ -15,6 +15,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: 700;
+  letter-spacing: 0.4rem;
 }
 
 .TodoTemplate .button {
