--- a/client/src/components/views/TodoPage/TodoList.scss
+++ b/client/src/components/views/TodoPage/TodoList.scss
@@ -28,6 +28,7 @@
 .bye {
   background-color: white;
   box-shadow: 0px 0px 3px -2px rgb(10, 10, 10);
+  cursor: pointer;
 }
 
 .button {
@@ -38,6 +39,7 @@
   opacity: 0.6;
   border: none;
   padding: 5px 7px 5px 7px;
+  cursor: pointer;
   -webkit-transition: all 0.3s;
   &:hover {
     background-color: #b6dcdf;
