--- a/client/src/components/views/TodoPage/TodoList.scss
+++ b/client/src/components/views/TodoPage/TodoList.scss
@@ -26,8 +26,13 @@
   }
 }
 .bye {
-  background-color: white;
+  background-color: rgb(153, 153, 153);
+  border: none;
+  border-radius: 3px;
+  padding: 3px 3px 3px 3px;
   box-shadow: 0px 0px 3px -2px rgb(10, 10, 10);
+  float: right;
+  margin: 8px 8px 8px 8px;
   cursor: pointer;
 }
 
