--- a/client/src/components/views/TodoPage/TodoList.scss
+++ b/client/src/components/views/TodoPage/TodoList.scss
@@ -7,6 +7,11 @@
   font-size: 2rem;
 }
 
+.btn-group {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .hello {
   background-color: #ff0000;
   border: none;
@@ -20,6 +25,7 @@
   border-radius: 50%;
   color: white;
   cursor: pointer;
+
   &:hover {
     background-color: #ffcccc;
     box-shadow: 0px 0px 5px 4px rgb(223, 216, 214);
@@ -31,7 +37,7 @@
   border-radius: 3px;
   padding: 3px 3px 3px 3px;
   box-shadow: 0px 0px 3px -2px rgb(10, 10, 10);
-  float: right;
+
   margin: 8px 8px 8px 8px;
   cursor: pointer;
 }
